[project]
name = "stocks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "matplotlib>=3.10.3",
    "polygon-api-client>=1.14.6",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.42",
    "tabulate>=0.9.0",
]
